polaris-react/src/components/Navigation/_variables.scss
$nav-variables: (
  mobile-spacing: calc(var(--p-space-2) + var(--p-space-05)),
  desktop-spacing: calc(var(--p-space-1) + var(--p-space-05)),
  mobile-height: 40px,
  desktop-height: 28px,
  icon-size: 20px,
  item-line-height: 40px,
);
@function nav($variable) {
  @return map-get($nav-variables, $variable);
}

$nav-animation-variables: (
  items-to-stagger: 12,
  stagger-interval: 50,
);
@function nav-animation($variable) {
  @return map-get($nav-animation-variables, $variable);
}

@mixin nav-item-attributes {
  // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
  @include unstyled-button;
  font-size: var(--p-font-size-200);
  font-weight: var(--p-font-weight-semibold);
  // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
  line-height: 36px;
  display: flex;
  flex-grow: 1;
  align-items: flex-start;
  max-width: 100%;
  padding: 0 var(--p-space-1) 0 var(--p-space-3);
  margin: 0;
  color: var(--p-color-text);
  text-decoration: none;
  text-align: left;

  // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
  @include focus-ring;

  &:focus-visible {
    // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
    @include focus-ring($style: 'focused');
    background: var(--p-color-bg-app-hover);
    color: var(--p-color-text);
    text-decoration: none;
  }

  &:active,
  &:active:hover {
    color: var(--p-color-text);
    background-color: var(--p-color-bg-app-active);
    // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
    @include no-focus-ring;
  }

  #{$se23} & {
    padding-left: var(--p-space-1);

    &:focus-visible:not(:active) {
      /* stylelint-disable-next-line polaris/border/polaris/at-rule-disallowed-list -- se23 */
      @include no-focus-ring;
      z-index: var(--p-z-index-1);
      outline: var(--p-border-width-2) solid
        var(--p-color-border-interactive-focus);
    }
  }

  @media #{$p-breakpoints-md-up} {
    font-size: var(--p-font-size-200);
    font-weight: var(--p-font-weight-medium);
    line-height: var(--p-font-line-height-5);
    padding-left: var(--p-space-3);
  }

  &::-moz-focus-inner {
    border: 0;
  }

  svg,
  img {
    display: block;
    height: var(--p-space-5);
    width: var(--p-space-5);
  }

  .Icon-resized {
    svg,
    img {
      margin: var(--p-space-05);
      height: var(--p-space-4);
      width: var(--p-space-4);
    }

    img {
      #{$se23} & {
        border-radius: var(--p-border-radius-1);
      }
    }
  }
}

@mixin nav-item-icon-attributes {
  // stylelint-disable -- Polaris component custom properties
  // hardcoding this variable for now because we need to rip out all instances
  // of filter() eventually but can't for this one right now. The value is the
  // equivalent value for filter('icon').
  --pc-navigation-filter-icon: brightness(0) saturate(100%) invert(36%)
    sepia(13%) saturate(137%) hue-rotate(169deg) brightness(95%) contrast(87%);
  --pc-navigation-filter-icon-action-primary: brightness(0) saturate(100%)
    invert(20%) sepia(59%) saturate(5557%) hue-rotate(162deg) brightness(95%)
    contrast(101%);
  --pc-navigation-filter-icon-on-interactive: brightness(0) saturate(100%)
    invert(100%);
  // stylelint-enable
  flex-shrink: 0;
  align-self: flex-start;
  width: nav(icon-size);
  height: nav(icon-size);
  margin-top: calc(var(--p-space-2) + var(--p-space-05));
  margin-right: var(--p-space-3);
  margin-bottom: calc(var(--p-space-2) + var(--p-space-05));

  #{$se23} & {
    margin-top: var(--p-space-2);
    margin-right: var(--p-space-2);
    margin-bottom: var(--p-space-2);
  }

  @media #{$p-breakpoints-md-up} {
    margin-top: var(--p-space-1);
    margin-right: var(--p-space-2);
    margin-bottom: var(--p-space-1);

    #{$se23} & {
      margin-top: var(--p-space-1);
      margin-right: var(--p-space-2);
      margin-bottom: var(--p-space-1);
    }
  }

  svg {
    fill: var(--p-color-icon);
  }

  img {
    // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
    filter: var(--pc-navigation-filter-icon);
  }

  .Item:hover &,
  .Item:focus-visible & {
    // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
    svg {
      fill: var(--p-color-icon);
    }

    // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
    img {
      // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
      filter: var(--pc-navigation-filter-icon);
    }
  }

  .Item-selected &,
  .Item-selected:hover &,
  .subNavigationActive &,
  .subNavigationActive:hover &,
  .Item-child-active &,
  .Item-child-active:hover &,
  .Item-selected:focus-visible & {
    // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
    svg {
      fill: var(--p-color-icon-primary);
    }

    // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
    img {
      // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
      filter: var(--pc-navigation-filter-icon-action-primary);

      #{$se23} & {
        filter: var(--p-color-icon-primary);
      }
    }
  }

  // The regular nav items are wrapped in polaris icon components which add
  // the styles we're missing which causes the channel items to shift down
  // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
  svg {
    display: block;
  }
}

@mixin nav-list-item-attributes {
  position: relative;
  display: flex;
  flex-wrap: wrap;

  .RollupSection &,
  .SecondaryNavigation & {
    opacity: 1;
  }
  @for $i from 1 through nav-animation(items-to-stagger) {
    &:nth-child(#{$i}) {
      animation-delay: #{($i - 1) * nav-animation(stagger-interval)}ms;
    }
  }
}

@mixin nav-item-text-attributes {
  flex: 1 1 auto;
  margin-top: calc(var(--p-space-2) + var(--p-space-05));
  margin-bottom: calc(var(--p-space-2) + var(--p-space-05));
  line-height: var(--p-font-line-height-2);
  font-size: var(--p-font-size-100);

  @media #{$p-breakpoints-md-up} {
    margin-top: var(--p-space-1);
    margin-bottom: var(--p-space-1);
  }

  @media #{$p-breakpoints-md-down} {
    // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
    font-size: 15px;
    line-height: var(--p-font-line-height-2);
  }
}

@mixin usermenu-section-attributes {
  position: relative;
  margin-top: var(--p-space-4);

  &::before {
    content: '';
    position: absolute;
    top: calc(-1 * var(--p-space-2));
    left: 0;
    display: block;
    width: 100%;
    height: 1px;
    background-color: var(--p-color-bg-strong);
  }
}

